# DicomReader

./: CMakeLists.txt  ConfigWidget.cpp  ConfigWidget.h  DicomReader.cpp  DicomReader.h  Image.cpp  Image.h  ImagePair.cpp  ImagePair.h  MainWindow.cpp  MainWindow.h  MatchList.cpp  MatchList.h  README.md  dicom.cpp  dicom.h  main.cpp
cv/: DicomReader.cpp  DicomReader.h  Image.cpp  Image.h  ImagePair.cpp  ImagePair.h
input/: 10106  10196  10226  12359  12389  12419  test4.dcm  test5.dcm
ui/: ConfigWidget.h  MainWindow.cpp  MainWindow.h  ProgressDialog.cpp  ProgressDialog.h
