cmake_minimum_required(VERSION 3.5)
project(cv_test)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Core REQUIRED)

set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES main.cpp DicomReader.cpp DicomReader.h MainWindow.cpp MainWindow.h Image.h Image.cpp ConfigWidget.cpp ConfigWidget.h ImagePair.cpp ImagePair.h)
add_executable(cv_test ${SOURCE_FILES})
target_link_libraries(cv_test dcmdata)
target_link_libraries(cv_test dcmimgle)
target_link_libraries(cv_test opencv_core)
target_link_libraries(cv_test opencv_highgui)
target_link_libraries(cv_test opencv_features2d)
target_link_libraries(cv_test opencv_nonfree)
target_link_libraries(cv_test opencv_calib3d)
target_link_libraries(cv_test opencv_flann)
target_link_libraries(cv_test opencv_imgproc)
target_link_libraries(cv_test Qt5::Widgets)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")