cmake_minimum_required(VERSION 3.5)
project(cv_test)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Core REQUIRED)

set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES main.cpp cv/DicomReader.cpp cv/DicomReader.h ui/MainWindow.cpp ui/MainWindow.h cv/Image.h cv/Image.cpp ui/ConfigWidget.cpp ui/ConfigWidget.h cv/ImagePair.cpp cv/ImagePair.h cv/MatchList.cpp cv/MatchList.h ui/ProgressDialog.cpp ui/ProgressDialog.h)
add_executable(cv_test ${SOURCE_FILES})
target_link_libraries(cv_test dcmdata)
target_link_libraries(cv_test dcmimgle)
target_link_libraries(cv_test opencv_core)
target_link_libraries(cv_test opencv_highgui)
target_link_libraries(cv_test opencv_features2d)
target_link_libraries(cv_test opencv_nonfree)
target_link_libraries(cv_test opencv_calib3d)
target_link_libraries(cv_test opencv_flann)
target_link_libraries(cv_test opencv_imgproc)
target_link_libraries(cv_test Qt5::Widgets)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")